# scopex

./: .gitignore  CMakeLists.txt  README.md
include/: communicate.h  panels.h  signals.h  sinusoidal_panel.h
src/: communicate.cpp  drawing_panel.cpp  drawing_panel.h  main.cpp  main.h  main_frame.cpp  main_frame.h  network_interface.cpp  network_interface.h  nif_dialog.cpp  nif_dialog.h  osc_panel.cpp  osc_panel.h  panels.cpp  panels.h  signal_analyzer.cpp  signal_analyzer.h  signals.cpp  signals.h  sinusoidal_panel.cpp  sinusoidal_panel.h  sv_dialog.cpp  sv_dialog.h  sv_handler.cpp  sv_handler.h  sv_handler_factory.cpp  sv_handler_factory.h  sv_handler_thread.cpp  sv_handler_thread.h  sv_stream_list.cpp  sv_stream_list.h  sv_stream_thread.cpp  sv_stream_thread.h  sv_subs_factory.cpp  sv_subs_factory.h  threads.cpp  threads.h  vector_panel.cpp  vector_panel.h
tools/: scopex.fbp
